[gd_scene load_steps=6 format=3 uid="uid://dqpfkdjvr8ji3"]

[ext_resource type="Script" path="res://Scripts/option.gd" id="1_o6f02"]
[ext_resource type="AudioStream" uid="uid://dmmkmdjob7y5t" path="res://sounds/main menu bg music.mp3" id="2_md1ph"]
[ext_resource type="Texture2D" uid="uid://c5cwka4lgwhdy" path="res://assets/menu_bg.png" id="3_vv6qa"]
[ext_resource type="AudioStream" uid="uid://u5020ur5kjk1" path="res://sounds/blob.wav" id="4_kx2be"]
[ext_resource type="Texture2D" uid="uid://bq2m15y65km8f" path="res://assets/controls.png" id="5_fxjew"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6f02")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
metadata/bg = ExtResource("3_vv6qa")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("3_vv6qa")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 343.0
offset_top = 28.0
offset_right = 563.0
offset_bottom = 68.0
scale = Vector2(2.28758, 2.19788)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play p2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Play against another player"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 374.0
offset_top = 117.0
offset_right = 585.0
offset_bottom = 157.0
scale = Vector2(2.11636, 1.97377)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="play cpu" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Play against the computer"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 218.0
offset_right = 599.0
offset_bottom = 258.0
scale = Vector2(1.42696, 2.16726)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="back" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Go back"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kx2be")
volume_db = 15.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_md1ph")
volume_db = -5.0
autoplay = true

[node name="controls_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 323.5)
scale = Vector2(0.601042, 0.600926)
texture = ExtResource("5_fxjew")

[connection signal="pressed" from="MarginContainer/VBoxContainer/play p2" to="." method="_on_play_p_2_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/play cpu" to="." method="_on_play_cpu_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/back" to="." method="_on_back_pressed"]
